
2024-09-23
==========
* Allow setting of response properties via path segments
* Implement preloading

2024-09-23
==========
* Initial implementation